' Generated by UML Generator
' Encoded: bLCzJyCm4DtpApmQIYeOM2Ae2YmWCI0wb0enkB6Ld73iodRwGTN_pjb9NBSI0qjoTtxdTtxFdbh7Z6iRcTblK2jcM4DAoQnzSCx0idNYfTHg1Z-2N6SrS45ACAKKMHPGv0sx0NEopmZ9jmK1vNoqYz4U6H1o88Ofhfk2l8S_kITARFg4NfmWIoqbMD3gdN5eRK6uRfV8SKzknhSUcUDdD53JZlMAT9n-gr4bt0Uz66OOMPzsC2okDV0Uj3W5BUZk7DJejQ0Dsyw1kxedmlHPG5MxSt0Od0ix1rTJxMfXYgWGmfPQIy6KHpezGtrLvVcxA3iCcZxgRITd50GKHgeKHLX3vLefFM0JX_9PVPp9fwkU6FLxC8RjNi6wks6QoV-iyOBdo4qtYGm9Nn0zReV2llGJ_zaGZjAx4BHDdC1If-zfRPZzIRSgNMASTxF66v5O0WeSC8aNU5YrjFGRd7jddLYbZMkmRUXBYqV5X4qEEI2YXJDeMeb8hOAJnxw6WQBCL7Qm_VChQOwlQJoUn8kJUSylypm8vcEDSLoS2iNn-Vu2
' URL: http://www.plantuml.com/plantuml/uml/bLCzJyCm4DtpApmQIYeOM2Ae2YmWCI0wb0enkB6Ld73iodRwGTN_pjb9NBSI0qjoTtxdTtxFdbh7Z6iRcTblK2jcM4DAoQnzSCx0idNYfTHg1Z-2N6SrS45ACAKKMHPGv0sx0NEopmZ9jmK1vNoqYz4U6H1o88Ofhfk2l8S_kITARFg4NfmWIoqbMD3gdN5eRK6uRfV8SKzknhSUcUDdD53JZlMAT9n-gr4bt0Uz66OOMPzsC2okDV0Uj3W5BUZk7DJejQ0Dsyw1kxedmlHPG5MxSt0Od0ix1rTJxMfXYgWGmfPQIy6KHpezGtrLvVcxA3iCcZxgRITd50GKHgeKHLX3vLefFM0JX_9PVPp9fwkU6FLxC8RjNi6wks6QoV-iyOBdo4qtYGm9Nn0zReV2llGJ_zaGZjAx4BHDdC1If-zfRPZzIRSgNMASTxF66v5O0WeSC8aNU5YrjFGRd7jddLYbZMkmRUXBYqV5X4qEEI2YXJDeMeb8hOAJnxw6WQBCL7Qm_VChQOwlQJoUn8kJUSylypm8vcEDSLoS2iNn-Vu2
' Generated on: 2025-10-21T22:13:55.612164200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Particle {
  -x: int
  -y: int
  -{static} random: Random = new Random()
  -{static} collisionRadius: double = 1.5
  --
  +Particle(x: int, y: int)
  +getX(): int
  +setX(x: int): void
  +getY(): int
  +setY(y: int): void
  +move(maxWidth: int, maxHeight: int): void
  +collidesWith(other: Particle): boolean
  +toString(): String
}

class Box {
  -{static} instance: Box = null
  -width: int
  -height: int
  -particles: ArrayList<Particle>
  -{static} random: Random = new Random()
  --
  -Box(width: int, height: int)
  +{static} getInstance(width: int, height: int): Box
  +getWidth(): int
  +getHeight(): int
  +getParticleCount(): int
  +addRandomParticle(): void
  +initializeParticles(count: int): void
  +step(): void
  +visualize(): void
  +{static} resetInstance(): void
}

class Simulation {
  +{static} main(args: String[]): void
}

Particle ..> Particle
Box *-- Box
Box o-- Particle
@enduml